--- a/package.json
+++ b/package.json
@@ -6,14 +6,16 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "express": "~4.10.6",
     "body-parser": "~1.10.1",
     "cookie-parser": "~1.3.3",
-    "morgan": "~1.5.1",
-    "serve-favicon": "~2.2.0",
+    "cors": "^2.8.5",
     "debug": "~2.1.1",
     "ejs": "~1.0.0",
+    "express": "~4.10.6",
+    "express-session": "^1.15.6",
+    "morgan": "~1.5.1",
     "mysql": "latest",
-    "express-session": "latest"
+    "serve-favicon": "~2.2.0",
+    "session-file-store": "^1.2.0"
   }
 }
