--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "debug": "~2.1.1",
     "ejs": "~1.0.0",
     "express": "~4.10.6",
+    "express-jwt": "^5.3.1",
     "express-session": "^1.15.6",
+    "jsonwebtoken": "^8.4.0",
     "morgan": "~1.5.1",
     "mysql": "latest",
     "serve-favicon": "~2.2.0",
