--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "morgan": "~1.5.1",
     "mysql": "latest",
     "serve-favicon": "~2.2.0",
-    "session-file-store": "^1.2.0"
+    "session-file-store": "^1.2.0",
+    "uuid": "^3.3.2"
   }
 }
